fix: spacing

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @layer components {
   .header {
-    @apply fixed bottom-0 left-0 right-0 pb-6 pt-6 border-t border-zinc-600 bg-zinc-800 z-50;
+    @apply fixed bottom-0 left-0 right-0 py-3 border-t border-zinc-600 bg-zinc-800 z-50;
     @apply md:static md:pb-0 md:pt-9 md:border-0;
     @apply px-9 flex gap-8 justify-between items-center;
   }
